--- a/templates/telefon/telefon_list.html
+++ b/templates/telefon/telefon_list.html
@@ -40,7 +40,7 @@
     <h2 class="text-center mb-5">📋 Telefonlar ro‘yxati</h2>
 
     <div class="row">
-        {% for telefon in telefons %}
+        {% for telefon in tele %}
         <div class="col-md-4 mb-4">
             <div class="card telefon-card shadow h-100">
                 {% if telefon.image %}
