--- a/templates/telefon/telefon_list.html
+++ b/templates/telefon/telefon_list.html
@@ -31,7 +31,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">📱 Telefonlar.uz</a>
+        <a class="navbar-brand" href="{% url  'home'%}">📱 Telefonlar.uz</a>
     </div>
 </nav>
 
