--- a/templates/telefon/telefon_info.html
+++ b/templates/telefon/telefon_info.html
@@ -28,7 +28,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">📱 Telefonlar.uz</a>
+        <a class="navbar-brand" href="{% url 'home'%}">📱 Telefonlar.uz</a>
         <a class="btn btn-outline-light ms-auto" href="{% url 'telefon_list' %}">⬅ Orqaga</a>
     </div>
 </nav>
@@ -75,7 +75,7 @@
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 mt-5">
-    <p class="mb-0">© 2025 Telefonlar.uz | Barcha huquqlar himoyalangan.</p>
+    <p class="mb-0">Telefonlar.uz | Barcha huquqlar himoyalangan.</p>
 </footer>
 
 <!-- Bootstrap JS -->
